--- a/README
+++ b/README
@@ -4,8 +4,8 @@ Brain-Fry
 A stupid and simple Brain F*ck compiler for x64, supports emitting ELF64
 object files. This project uses my library - Jas to compile assembly code
 down into a plain ELF file. Just like the Brain F*ck language itself, its
-not very designed to be used for writing actual software, but instead is 
-proof of concept for the Jas assembler.
+not wasn't ever designed to be used for writing actual software, rather its
+a proof of concept for the Jas assembler.
 
 Please see https://github.com/cheng-alvin/jas if you're interested in deve-
 loping compilers and applications like this. 
