--- a/README
+++ b/README
@@ -12,3 +12,6 @@ loping compilers and applications like this.
 
 In order to build the compiler, simply run `make` in the root directory, 
 all linking and everything will be automatic.
+
+
+Usage: ./brainfry source.bf
